--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div id="nameInputSection">
     </div> 
       <div id="gameBoard"></div>
+      <div id="boats">
+        <h2>Ships</h2>
+        <div id="boatList"></div>
+      </div>
       <script src="./scripts/index.js"></script>
 </body>
 </html>
