adding enemy play grid in progress, introduced a bug (see todo), started changing styling to vw instead of em for grid widths

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>Battleship</h1>
     <div id="nameInputSection">
     </div> 
+      <div id="enemyBoard">
+        Position Your Ships!
+      </div>
+      <hr style = "width: 80vw">
       <div id="gameBoard"></div>
       <div id="boats">
         <h2>Ships</h2>
