boats sinking and identifying correctly

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="nameInputSection">
     </div> 
       <div id="enemyBoard">
-        Position Your Ships!
+        <!-- Position Your Ships! -->
       </div>
       <hr style = "width: 80vw">
       <div id="gameBoard"></div>
