added playerturn div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
       <hr style = "width: 80vw">
       <div id="gameBoard"></div>
+      <div id="playerTurn"></div>
       <div id="boats">
         <h2>Ships</h2>
         <div id="boatList"></div>
