--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1>Battleship</h1>
+  <h1>Battleship</h1>
+    <img id="hero" src="./media/ship.jpg" alt="ship">
+    <!-- <img id="hero" src="./media/aircraft_carrier.jpg" alt="aircraft_carrier"> -->
     <div id="nameInputSection">
     </div> 
+    <div id="playerTurn"></div>
+    <div id="gameContainer">
       <div id="enemyBoard">
-        <!-- Position Your Ships! -->
       </div>
-      <hr style = "width: 80vw">
+      <div class="break"></div>
       <div id="gameBoard"></div>
-      <div id="playerTurn"></div>
+      <button id="placeShip">Place Ship</button>
+      <div class="break"></div>
       <div id="boats">
         <h2>Ships</h2>
         <div id="boatList"></div>
